# SiteView

./: .codespellrc  CHANGELOG.md  CONTRIBUTING.rst  LICENSE  README.rst  pyproject.toml  siteview-env.yml
.github/workflows/: release.yml  test.yml  test_and_release.yml
data/: .gitignore
docs/notes/: design.md
examples/: 01_mesh_reader.py  02_column_reader.py  03_column_volume.py  04_select_columns_in_radius.py  05_time_series_single_column.py  README.md  common.py
src/e3sm_siteview/: app.py  cli.py  constants.py  data_models.py  viewer.py
src/e3sm_siteview/analysis/: __init__.py  cell_timechart.py  column_heatmap.py  time.py  viz3d.py
src/e3sm_siteview/assets/: __init__.py
src/e3sm_siteview/components/: __init__.py  controls.py  css.py  field_selection.py  footer.py  site_selection.py  tools.py  view_drawer.py
src/e3sm_siteview/io/: __init__.py  _perf.py  _sm_compat.py  eam_filters.py  eam_reader.py
src/e3sm_siteview/module/: __init__.py
src/e3sm_siteview/module/serve/: script.js  style.css
src/e3sm_siteview/pages/: __init__.py  field_selection.py  site_selection.html  site_selection.py  visualization.py
src/e3sm_siteview/plugins/: reader.py
tests/: test_import.py
