[project]
name = "e3sm-siteview"
version = "1.0.1"
description = "E3SM Column Explorer"
authors = [
    {name = "Kitware Inc."},
]
dependencies = [
    "vtk>=9.6",
    "trame >=3.13.2",
    "trame-vuetify",
    "trame-rca[turbo] >=2.6",
    "trame-vtk", # FIXME use RCA instead
    "trame-plotly",
    "trame-colormaps >=1.6.1",
    "trame-dockview",
    "trame-dataclass >=2.1.3",
    "pyproj>=3.6.1",
    "netCDF4>=1.6.5",
]
requires-python = ">=3.12"
readme = "README.rst"
license = {text = "Apache Software License"}
keywords = ["Python", "Interactive", "Web", "Application", "Framework"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
app = [
    "pywebview",
]
dev = [
    "pre-commit",
    "ruff",
    "pytest >=6",
    "pytest-cov >=3",
    "nox",
]

[project.scripts]
e3sm-siteview = "e3sm_siteview.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build]
include = [
  "/src/**/*.py",
  "/src/e3sm_siteview/assets/**/*.png",
  "/src/e3sm_siteview/module/serve/**",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/e3sm_siteview",
]

[tool.ruff]
# Vendored copy of QuickView's EAM VTK algorithms — keep upstream style, don't
# relint. Reconcile into a shared package later (see io/ module docstrings).
extend-exclude = ["src/e3sm_siteview/io"]

[tool.ruff.lint]
extend-select = [
    "ARG", # flake8-unused-arguments
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "EM",  # flake8-errmsg
    "EXE", # flake8-executable
    "G",   # flake8-logging-format
    "I",   # isort
    "ICN", # flake8-import-conventions
    "NPY", # NumPy specific rules
    "PD",  # pandas-vet
    "PGH", # pygrep-hooks
    "PIE", # flake8-pie
    "PL",  # pylint
    "PT",  # flake8-pytest-style
    "PTH", # flake8-use-pathlib
    "RET", # flake8-return
    "RUF", # Ruff-specific
    "SIM", # flake8-simplify
    "T20", # flake8-print
    "UP",  # pyupgrade
    "YTT", # flake8-2020
]
ignore = [
    "PLR09",   # Too many <...>
    "PLR2004", # Magic value used in comparison
    "ISC001",  # Conflicts with formatter
]
isort.required-imports = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20", "PLC0415"]
"noxfile.py" = ["T20"]
"examples/**" = ["T20", "INP001"]
"src/**" = ["SIM117", "T"]
"src/e3sm_siteview/plugins/**" = [
    "PLW",
    "ARG",
    "RET",
    "PLC",
    "SIM",
    "EM",
    "PGH",
    "T",
]

[tool.semantic_release]
version_toml = [
    "pyproject.toml:project.version",
]
version_variables = [
    "src/e3sm_siteview/__init__.py:__version__",
]

build_command = """
    python -m pip install uv
    uv build
"""

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true
